--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -10,9 +10,8 @@ ja:
         phone: 電話番号
         sex: 性別
         mail_address: メールアドレス
-      products:
-        form:
-          name: 作品名
-          price: 価格
-          stock: 数量
-          note:　備考
+      # product:
+      #     name: 作品名
+      #     price: 価格
+      #     stock: 数量
+      #     note:　備考
